# monsieur-ganesha

./: .coverage  .ganesha.toml.example  .gitignore  .gitmodules  .mailmap  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  install.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  claude-review.yml  piscine-demo.yml
keys/: bija-krim.asc  madame-kali.asc  monsieur-ganesha.asc  monsieur-piscinette.asc  monsieur-shiva.asc  qlrddev.asc
src/ganesha/: __init__.py  __main__.py  cli.py  config.py  xp.py
src/ganesha/checks/: __init__.py  commit_msg.py  commit_range.py  compiler.py  dawon.py  docstring.py  forbidden.py  norminette.py  readme.py
tests/: test_cli.py  test_commit_msg.py  test_commit_range.py  test_config.py  test_dawon.py  test_docstring.py  test_forbidden.py  test_general_mode.py  test_piscine_c00.py  test_readme.py  test_xp.py
tests/fixtures/: .ganesha.toml  compile_error.c  docstring_missing_param.c  docstring_no_about.c  docstring_no_code_block.c  docstring_no_example.c  docstring_valid.c  forbidden.c  norm_error.c  valid.c
tests/fixtures/c00/: ft_is_negative.c  ft_print_alphabet.c  ft_print_numbers.c  ft_print_reverse_alphabet.c  ft_putchar.c
