[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "monsieur-ganesha"
version = "0.1.0"
description = "Pre-commit hooks para 42 school piscine — Monsieur Ganesha"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ganesha = "ganesha.cli:main"

# Tells poetry-core where to find the package (src layout).
[tool.poetry]
packages = [{include = "ganesha", from = "src"}]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "pylint>=3.2",
]

# --- Tool configuration ---

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
